feat: 新增强软弱虚引用实践