@@ -7,6 +7,10 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
  * @author ganxinming
  * @createDate 2021/6/15
  * @description
+ *
+ *
+ * 运行前：指定JVM参数
+ * -Xms6m -Xmx6m -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC  -XX:MetaspaceSize=200m -XX:MaxMetaspaceSize=200m
  */
 @SpringBootApplication
 public class SpringJvmApp {
